# AMP_Eingabemaske

./: .gitignore  Dockerfile  README.md  TESTPERSONAS.md  app.js  index.html  render.yaml  server.py  styles.css
chatbot_rewe_group/: .gitignore  AZURE_RESSOURCEN.md  README.md  azure-pipelines.yml
chatbot_rewe_group/services/az_functions/llm/: function_app.py  host.json  interview_graph.py  requirements.txt
chatbot_rewe_group/services/az_functions/llm/adapters/: az_blob_client.py  az_table_client.py  graphiti_client.py
chatbot_rewe_group/services/az_functions/llm/state_nodes/: expert_nodes.py  flow_nodes.py  intro_nodes.py  question_nodes.py  summary_nodes.py
chatbot_rewe_group/services/az_functions/llm/utils/: file_loader.py  helper_functions.py  llm_utils.py  (+1 more)
chatbot_rewe_group/services/backend/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
chatbot_rewe_group/services/streamlit/: .gitignore  Dockerfile  Interview.py  docker-compose.yml  pyproject.toml  requirements.txt
chatbot_rewe_group/services/streamlit/.streamlit/: config.toml
chatbot_rewe_group/services/streamlit/adapters/: az_blob_client.py  az_func_calls.py  az_table_client.py
chatbot_rewe_group/services/streamlit/pages/: 1_Interview_Assistant.py  2_Impressum.py  3_Nutzungsbedingungen.py
chatbot_rewe_group/services/streamlit/rendering/: render_elements.py
chatbot_rewe_group/services/streamlit/static/: styles.css
chatbot_rewe_group/services/streamlit/utils/: ui.py  util_functions.py
docs/: PROJECT_HANDOFF.md  VS_CODE_FIRST_CHAT_PROMPT.md
(+22 files in other folders)
